HOCS-4438: send Channel with case creation
Change to send the origin ('Channel') with the initial case data
creation packet. This change defaults the option on DECS to this value
for cases that have been created through the webform.